k8s/fastapi/templates/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: fastapi-gateway
  namespace: fastapi
  annotations:
    kubernetes.io/description: "Exposes EKS external traffic endpoints using Istio-managed Gateway API gateways"
    networking.istio.io/service-type: LoadBalancer
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
